--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="myWeek1">
         <h1>Data Science for Economists.</h1>
         
-        <h3>Covid-19</h3>
-        <p>The first chart tracks Covid-19 cases by UK region.</p>
+        <h3>UK Inflation</h3>
+        <p>The first chart tracks CPI Inflation in the UK.</p>
         <div class="chart" id="Chart1"></div>
 
-        <h3>Productivity puzzle</h3>
-        <p>My second chart looks at productivity in the UK</p>
+        <h3>USD to GBP Exchange Rate</h3>
+        <p>My second chart tracks the USD to GBP exchange rate.</p>
         <div class="chart" id="Chart2"> </div>
     </div> 
 </body>
@@ -40,9 +40,9 @@
 
 <script>
     //Define charts:
-    var myChart1 = "chart1_covidUKRegions.json";
-    var myChart2 = "chart2_ukProductivity.json";
-
+    var myChart1 = "chartINF1.json";
+    var myChart2 = "exr_usdgbp_slider.json";
+// the homework is to change these file names
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
     vegaEmbed('#Chart2', myChart2);
