--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     
         <p>All about charts, numbers and data stories. </p>
     
-        <a href="project.html" id="link1">Portfolio</a>
-        <a href="portfolio.html" id="link2">My project</a>
+        <a href="project.html" id="link1">Project</a>
+        <a href="portfolio.html" id="link2">Portfolio</a>
    
    
 
