--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 
     <!-- Link to my style sheet -->
-    <link rel="stylesheet" href="index3.css">
+    <link rel="stylesheet" href="portfolio.css">
 
     <!--The next three lines allow the Vega embed-->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.17.0"></script>
@@ -46,6 +46,7 @@
 
         <h3>IMF Lending as a % of World Real GDP</h3>
         <p>The second chart adjusts upon the previous examining IMF lending as a % of World Real GDP from 1984 to 2022</p>
+        <p>Upon transforming the data, it appears the most 'risky' year would be 1985. Outstanding credit in 1985 peaked at 0.38% of World GDP.</p>
         <div class="chart" id="Chart4"> </div>
     </div>
 </body>
