--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 
     <!-- Link to my style sheet -->
-    <link rel="stylesheet" href="index3.css">
+    <link rel="stylesheet" href="index.css">
 
     <!--The next three lines allow the Vega embed-->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.17.0"></script>
@@ -29,10 +29,11 @@
     
         <p>All about charts, numbers and data stories. </p>
     
-        <a href="project.html" id="link1">Project</a>
-        <a href="portfolio.html" id="link2">Portfolio</a>
+        <p>This is my portfolio</p>
+        <a href="project.html" id="link1">Portfolio</a>
+        <a href="portfolio.html" id="link2">My project</a>
    
-   
+   </div>
 
 
 </html>
