--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <p>All about charts, numbers and data stories. </p>
     
         <p>This is my portfolio</p>
-        <a href="project.html" id="link1">Portfolio</a>
-        <a href="portfolio.html" id="link2">My project</a>
+        <a href="project.html" id="link1"> My Project</a>
+        <a href="portfolio.html" id="link2">My Portfolio</a>
    
    </div>
 
