--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,15 @@
         <p>Upon transforming the data, it appears the most 'risky' year would be 1985. Outstanding credit in 1985 peaked at 0.38% of World GDP.</p>
         <div class="chart" id="Chart4"> </div>
     </div>
+
+    <div class="myWeek3">
+        <h1> Portfolio Task Week 3.</h1>
+            <p>Week 2 task : Using Google Colab to input data manually into a chart</p>
+        
+        <h3>London Claimant Count</h3>
+        <p>This chart shows the development of the Claimant Count in London over time</p>
+        <div class="chart" id="Chart5"></div>
+    </div>
 </body>
 
 <script>
@@ -57,12 +66,14 @@
     var myChart2 = "exr_usdgbp_slider.json";
     var myChart3 = "imflending.json";
     var myChart4 = "imflendingadjusted.json";
+    var myChart5 = "claimantcount.json"
 // the homework is to change these file names
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
     vegaEmbed('#Chart2', myChart2);
     vegaEmbed('#Chart3', myChart3)
     vegaEmbed('#Chart4', myChart4)
+    vegaEmbed('#Chart5', myChart5)
 </script>
 
 </html>
