--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
 <body>
     <div class="wrap">    
 
-        <h1>This is my Data Science web site:</h1>    
+        <h1>This is my Data Science website</h1>    
     
-        <p>All about charts, numbers and data stories. </p>
-    
-        <p>This is my portfolio</p>
-        <a href="project.html" id="link1"> My Project</a>
-        <a href="portfolio.html" id="link2">My Portfolio</a>
+        <p>All about charts, numbers and data stories</p>
+   
+        <div class="topnav">
+        <a href="project.html" id="link1">Portfolio</a>
+        <a href="portfolio.html" id="link2">My project</a>
+        <a href="https://rapidcharts.io/datascience" id="link3">Course Homepage</a>
+        <a href="https://github.com/JosephOReilly21/JosephOReilly21.github.io" id="link4">Github</a>
+
+
+    </div>
+   
    
    </div>
 
