--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 
 <body>
-    <div class="wrap">    
+    <div class="heading">    
 
-        <h1>This is my Data Science website</h1>    
-    
-        <p>All about charts, numbers and data stories</p>
+<h2>Welcome to my Data Science Website</h2>
+
+    </div>
    
         <div class="topnav">
-        <a href="project.html" id="link1">Project</a>
-        <a href="portfolio.html" id="link2">Portfolio</a>
+        <a href="project.html" id="link1">Portfolio</a>
+        <a href="portfolio.html" id="link2">My project</a>
         <a href="https://rapidcharts.io/datascience" id="link3">Course Homepage</a>
         <a href="https://github.com/JosephOReilly21/JosephOReilly21.github.io" id="link4">Github</a>
 
