--- a/portfolio.html
+++ b/portfolio.html
@@ -163,7 +163,27 @@
 
      </div>
      
+        <!---------------------------------------------------Week8------------------------------------------------------>
 
+        <div class="subtitle">
+            <h2>Week 8</h2>
+        </div>
+
+        <div class="myWeek8">
+            <h1>Festival of Economics</h1>
+            <p>Prices and Wages</p>
+
+
+            <div class="chartw8" id="Chart19"></div>
+
+            <p>To keep up with rising inflation, wages have to rise to match. However in the UK Private Sector wages have grown faster than the public Sector</p>
+
+            <div class="chartw7" id="Chart20"></div>
+            <p>Compounding on rising inflation, House prices since mid-2020 have risen faster than both sets of wages. This is worrying for hopeful home owners</p>
+
+        </div>
+
+            
 
 
 </body>
@@ -188,6 +208,8 @@
     var myChart16 = "W5CCUKWOMEN50.json";
     var myChart17 = "scotlandmap.json";
     var myChart18 ="scotlandcrimemap.json";
+    var myChart19 = "pvp.json";
+    var myChart20 = "pvphouse.json"
 // the homework is to change these file names
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
@@ -208,6 +230,9 @@
     vegaEmbed('#Chart16', myChart16)
     vegaEmbed('#Chart17', myChart17)
     vegaEmbed('#Chart18', myChart18)
+    vegaEmbed('#Chart19', myChart19)
+    vegaEmbed('#Chart20', myChart20)
+
 </script>
 
 </html>
