--- a/portfolio.html
+++ b/portfolio.html
@@ -183,6 +183,27 @@
 
         </div>
 
+        <!---------------------------------------------------Week8------------------------------------------------------>
+        <div class="subtitle">
+            <h2>Week 9</h2>
+        </div>
+
+        <div class="myWeek8">
+            <h1>Advanced Charts</h1>
+            <p>US Crime</p>
+
+
+            <div class="chartw9" id="Chart21"></div>
+
+            <p>This Scatter chart shows a simple plot of crime rate against unemployment rate by state. A regression has been layered over.</p>
+
+            <div class="chartw9" id="Chart22"></div>
+            <p>This second scatter shows crime rate against mediam household income by state. A regression has been layered as well as an R-squared value</p>
+
+        </div>
+
+
+
             
 
 
@@ -209,7 +230,10 @@
     var myChart17 = "scotlandmap.json";
     var myChart18 ="scotlandcrimemap.json";
     var myChart19 = "pvp.json";
-    var myChart20 = "pvphouse.json"
+    var myChart20 = "pvphouse.json";
+    var myChart21 = "unemploymentcrime.json";
+    var myChart22 = "incomevscrime.json";
+
 // the homework is to change these file names
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
@@ -232,6 +256,8 @@
     vegaEmbed('#Chart18', myChart18)
     vegaEmbed('#Chart19', myChart19)
     vegaEmbed('#Chart20', myChart20)
+    vegaEmbed('#Chart21', myChart21)
+    vegaEmbed('#Chart22', myChart22)
 
 </script>
 
