--- a/portfolio3.html
+++ b/portfolio3.html
@@ -31,7 +31,7 @@
 
     <div class="containerportfolio">
     <a href="project.html" id="link1">Project</a>  
-    <a href="portfolio.html" id="link2">Portfolio</a>
+    <a href="portfolio3.html" id="link2">Portfolio</a>
     <a href="https://rapidcharts.io/datascience" id="link3">Course Homepage</a>
     <a href="https://github.com/JosephOReilly21/JosephOReilly21.github.io" id="link4">Github</a>
     </div>
