--- a/project.html
+++ b/project.html
@@ -40,6 +40,10 @@
 
 
     <!--Main body of project-->
+    <p class ="discussion">Joseph O'Reilly | Student Number: 1910238</p>
+    
+    <p class ="discussion">Word Count: 780</p>
+
     <p class ="heading">The Economics of Crime</p>
 
     <p class="discussion">Project Aims</p>
@@ -120,7 +124,7 @@
 
     <p class="subheading3">Data Analysis</p>
 
-    <p>For my first 3 on the US, I used the aforementioned data from the FBI. To create the Map and Line Chart, I pivoted the data from Long format, in order to fold the data correctly in Vega to allow for State and Year selection.
+    <p>To create my first two charts (Map and Line), I pivoted the data from Long format, in order to fold the data correctly in Vega to allow for State and Year selection.
     Link to Python notebook below. When visualising Three-Strikes, I layered a mark of a straight line inside the concatenation. This straight line required me to create a fake simple dataset to match the year 1994.
     </p>
 
