--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
     <p class="discussion">Project Aims</p>
         
     <p>The seminal work of Gary Becker in 1968 introduced the world to the Economics of Crime.
-        Becker's theory of crime modelled an economically rational criminal. One who is deterred through harsher sanctions and better legal alternatives in society.</p>
+        Becker's theory of crime modelled an economically rational criminal. This criminal is deterred through harsher sanctions and better legal alternatives in society.</p>
 
     <p>My project will attempt to visualise Becker's predictions on crime at the aggregate level.
         Using US and UK data, I will explore an array of economic measures which characterise better legal alternatives to crime.
