--- a/portfolio3.html
+++ b/portfolio3.html
@@ -34,6 +34,7 @@
     <a href="portfolio3.html" id="link2">Portfolio</a>
     <a href="https://rapidcharts.io/datascience" id="link3">Course Homepage</a>
     <a href="https://github.com/JosephOReilly21/JosephOReilly21.github.io" id="link4">Github</a>
+    <a href="index.html" id="link5">Homepage</a>
     </div>
 
     <p class ="heading">Portfolio</p>
