--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
        
         <div class="containerindex">
-        <a href="portfolio3.html" id="link2">Portfolio</a>
+        <a href="portfolio.html" id="link2">Portfolio</a>
         </div>
 
         <div class="containerindex">
