--- a/portfolio.html
+++ b/portfolio.html
@@ -189,7 +189,7 @@
 
     <p>This second scatter shows crime rate against mediam household income by state. A regression has been layered as well as an R-squared value, albeit very weak.</p>
 
-    <p class ="weektitle">Week 10</p>
+    <p class ="weektitle">Week 10/ Week 11</p>
 
     <p class ="taskdescription">Task 10: Machine Learning.</p>
 
